--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
