--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
+    "cloudinary": "^1.27.1",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -17,6 +18,7 @@
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
